--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "Tool wrapping Paper.js to make it super quick draw using your favorite editor",
   "main": "index.js",
+  "bin": {
+      "watch-js": "bin/watch-paper.bin.js"
+  },
   "scripts": {
     "test": "tape lib/**/**/**/*.test.js",
     "check": "eslint ./"
