--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "watch-paper": "bin/watch-paper.bin.js"
   },
   "engines": {
-    "node" : ">=6.10.3"
+    "node": ">=6.10.3"
   },
   "scripts": {
     "test": "tape lib/**/**/**/*.test.js",
@@ -36,7 +36,8 @@
   "homepage": "https://github.com/bugeats/watch-paper#readme",
   "dependencies": {
     "express": "^4.16.2",
-    "paper": "^0.11.5"
+    "paper": "^0.11.5",
+    "serve-index": "^1.9.1"
   },
   "devDependencies": {
     "eslint": "^4.14.0",
